	work again (or at least the important stuff).  Then I'll work on
	new features.

	So there it is.  If you're not ready for it, don't use it.  But if you
	are, I hope you like it.
	
-------------------------------------------------------------------------------
Wed Apr 12 21:46:41 PDT 2000	Michael Jennings <mej@eterm.org>

	Fixed auto mode problems.  That was a really dumb oversight.
	
-------------------------------------------------------------------------------
Thu Apr 13 21:15:03 PDT 2000	Michael Jennings <mej@eterm.org>

	Fixed an image loading problem.
	
-------------------------------------------------------------------------------
Mon Apr 17 22:25:27 PDT 2000	Michael Jennings <mej@eterm.org>

	I fixed the problem reported by Joakim Bodin <bodin@dreamhosted.com>
	with spawned processes.  Also fixed Esetroot as reported by Wayne
	Johnson <bigman1@alltel.net>.

	Support for buttons higher than 5 was also added to the action
	bindings code for those (like me) with IntelliMouse Explorers and
	XFree86 4.0. :-)
	
-------------------------------------------------------------------------------
Tue Apr 18 23:55:42 PDT 2000	Michael Jennings <mej@eterm.org>

	Added the pixmap beveling support back in so that the glass theme will
	work again.  Once again, you poor 8 bpp saps are SOL.

	I also added the icon support back in, along with a new built-in icon
	courtesy of Brian McFee <keebler@sandwich.net>.
	
-------------------------------------------------------------------------------
Mon Apr 24 18:46:25 PDT 2000	Michael Jennings <mej@eterm.org>

	Work around that polka-dot-making Imlib2 problem until it can be
	fixed properly.
	
-------------------------------------------------------------------------------
Mon Apr 24 20:43:00 PDT 2000	Michael Jennings <mej@eterm.org>

	Found the Imlib2 bug and fixed it, so revert this hack.
	
-------------------------------------------------------------------------------