@@ -3519,3 +3519,8 @@ Mon Apr 24 20:43:00 PDT 2000	Michael Jennings <mej@eterm.org>
 	Found the Imlib2 bug and fixed it, so revert this hack.
 	
 -------------------------------------------------------------------------------
+Tue Apr 25 11:45:15 PDT 2000	Michael Jennings <mej@eterm.org>
+
+	Updated per changes to Imlib2 API.
+	
+-------------------------------------------------------------------------------
